--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chart.js": "^4.4.9",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
