--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.10",
+    "t-writer.js": "^1.0.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
